Project structure using different modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,14 @@
 cmake_minimum_required(VERSION 3.13)
 
+# Pull in SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(picopter_project C CXX ASM)
+project(pbr C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
+# Initialize Pico's SDK
 pico_sdk_init()
 
-include_directories("${PROJECT_SOURCE_DIR}/src")
-file(GLOB SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.c")
-add_executable (picopter ${SOURCE_FILES})
-
-pico_enable_stdio_usb(picopter 1)
-pico_enable_stdio_uart(picopter 0)
-
-pico_add_extra_outputs(picopter)
-
-target_link_libraries(picopter pico_stdlib hardware_i2c)
+add_subdirectory(br) # balancing robot module
+add_subdirectory(rc) # remote controller module
