Serial plot debug and logging

--- a/br/CMakeLists.txt
+++ b/br/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_executable(br
         main.c
-        imu.c
         mpu6050.c
         )
 
@@ -8,5 +7,18 @@ pico_enable_stdio_usb(br 1)
 pico_enable_stdio_uart(br 0)
 
 pico_add_extra_outputs(br)
+
+# Log Level
+#
+# 0 -> NONE
+# 1 -> ERROR
+# 2 -> DEBUG
+#
+# For Serial Plot debugging, use one of the following levels.
+# Setting with one of these values will disable the default logs.
+# 4 -> RAW SENSORS
+# 5 -> IMU
+# 6 -> PID
+target_compile_definitions(br PUBLIC LOG_LEVEL=4)
 
 target_link_libraries(br pico_stdlib hardware_i2c)
