Refactor motor code

--- a/br/CMakeLists.txt
+++ b/br/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(br
         main.c
         mpu6050.c
+        uln2003.c
         )
 
 pico_enable_stdio_usb(br 1)
@@ -19,6 +20,6 @@ pico_add_extra_outputs(br)
 # 4 -> RAW SENSORS
 # 5 -> IMU
 # 6 -> PID
-target_compile_definitions(br PUBLIC LOG_LEVEL=4)
+target_compile_definitions(br PUBLIC LOG_LEVEL=2)
 
 target_link_libraries(br pico_stdlib hardware_i2c)
